@@ -1,6 +1,18 @@
 # emacs: -*- mode: python; py-indent-offset: 4; indent-tabs-mode: nil -*-
 # vi: set ft=python sts=4 ts=4 sw=4 et:
-"""The spm module provides basic functions for interfacing with SPM  tools."""
+"""The spm module provides basic functions for interfacing with SPM  tools.
+
+In order to use the standalone MCR version of spm, you need to ensure that
+the following commands are executed at the beginning of your script::
+
+   from nipype import spm
+   matlab_cmd = '/path/to/run_spm8.sh /path/to/Compiler_Runtime/v713/ script'
+   spm.SPMCommand.set_mlab_paths(matlab_cmd=matlab_cmd, use_mcr=True)
+
+you can test by calling::
+
+   spm.SPMCommand().version
+"""
 
 __docformat__ = 'restructuredtext'
 
@@ -111,7 +123,7 @@ class Info(object):
     """Handles SPM version information
     """
     @staticmethod
-    def version(matlab_cmd=None):
+    def version(matlab_cmd=None, paths=None, use_mcr=None):
         """Returns the path to the SPM directory in the Matlab path
         If path not found, returns None.
 
@@ -135,6 +147,15 @@ class Info(object):
             except:
                 matlab_cmd = 'matlab -nodesktop -nosplash'
         mlab = MatlabCommand(matlab_cmd=matlab_cmd)
+        mlab.inputs.mfile = False
+        if paths:
+            mlab.inputs.paths = paths
+        if use_mcr:
+            mlab.inputs.nodesktop = Undefined
+            mlab.inputs.nosplash = Undefined
+            mlab.inputs.single_comp_thread = Undefined
+            mlab.inputs.mfile = True
+            mlab.inputs.uses_mcr = True
         mlab.inputs.script = """
 if isempty(which('spm')),
 throw(MException('SPMCheck:NotFound','SPM not in matlab path'));
@@ -144,7 +165,6 @@ spm_path = spm('dir');
 fprintf(1, 'NIPYPE path:%s|name:%s|release:%s', spm_path, name, version);
 exit;
         """
-        mlab.inputs.mfile = False
         try:
             out = mlab.run()
         except (IOError, RuntimeError), e:
@@ -178,6 +198,9 @@ class SPMCommandInputSpec(BaseInterfaceInputSpec):
     mfile = traits.Bool(True, desc='Run m-code using m-file',
                         usedefault=True)
     use_mcr = traits.Bool(desc='Run m-code using SPM MCR')
+    use_v8struct = traits.Bool(True, min_ver='8', usedefault=True,
+                               desc=('Generate SPM8 and higher compatible jobs')
+                               )
 
 
 class SPMCommand(BaseInterface):
@@ -215,17 +238,25 @@ class SPMCommand(BaseInterface):
         # and can be set only during init
         self.mlab = MatlabCommand(matlab_cmd=self.inputs.matlab_cmd,
                                   mfile=self.inputs.mfile,
-                                  paths=self.inputs.paths,
-                                  uses_mcr=self.inputs.use_mcr)
+                                  paths=self.inputs.paths)
         self.mlab.inputs.script_file = 'pyscript_%s.m' % \
             self.__class__.__name__.split('.')[-1].lower()
         if isdefined(self.inputs.use_mcr) and self.inputs.use_mcr:
             self.mlab.inputs.nodesktop = Undefined
             self.mlab.inputs.nosplash = Undefined
+            self.mlab.inputs.single_comp_thread = Undefined
+            self.mlab.inputs.uses_mcr = True
+            self.mlab.inputs.mfile = True
 
     @property
     def version(self):
-        return Info.version()
+        version_dict = Info.version(matlab_cmd=self._matlab_cmd,
+                                    paths=self._paths,
+                                    use_mcr=self._use_mcr)
+        if version_dict:
+            return '.'.join((version_dict['name'].split('SPM')[-1],
+                             version_dict['release']))
+        return version_dict
 
     @property
     def jobtype(self):
@@ -300,9 +331,10 @@ class SPMCommand(BaseInterface):
 
         Examples
         --------
-        >>> a = SPMCommand()._reformat_dict_for_savemat(dict(a=1,b=dict(c=2,d=3)))
-        >>> print a
-        [{'a': 1, 'b': [{'c': 2, 'd': 3}]}]
+        >>> a = SPMCommand()._reformat_dict_for_savemat(dict(a=1,
+        ...                                                  b=dict(c=2, d=3)))
+        >>> a == [{'a': 1, 'b': [{'c': 2, 'd': 3}]}]
+        True
 
         """
         newdict = {}
@@ -401,48 +433,46 @@ class SPMCommand(BaseInterface):
         mscript = """
         %% Generated by nipype.interfaces.spm
         if isempty(which('spm')),
-             throw(MException('SPMCheck:NotFound','SPM not in matlab path'));
+             throw(MException('SPMCheck:NotFound', 'SPM not in matlab path'));
         end
-        [name, ver] = spm('ver');
-        fprintf('SPM version: %s Release: %s\\n',name, ver);
-        fprintf('SPM path: %s\\n',which('spm'));
+        [name, version] = spm('ver');
+        fprintf('SPM version: %s Release: %s\\n',name, version);
+        fprintf('SPM path: %s\\n', which('spm'));
         spm('Defaults','fMRI');
 
-        if strcmp(spm('ver'),'SPM8'), spm_jobman('initcfg');end\n
+        if strcmp(name, 'SPM8') || strcmp(name, 'SPM12b'),
+           spm_jobman('initcfg');
+           spm_get_defaults('CmdLine', 1);
+        end\n
         """
         if self.mlab.inputs.mfile:
-            if self.jobname in ['st', 'smooth', 'preproc', 'preproc8',
-                                'fmri_spec', 'fmri_est', 'factorial_design',
-                                'defs', 'dicom']:
-                # parentheses
-                mscript += self._generate_job('jobs{1}.%s{1}.%s(1)' %
+            if isdefined(self.inputs.use_v8struct) and self.inputs.use_v8struct:
+                mscript += self._generate_job('jobs{1}.spm.%s.%s' %
                                               (self.jobtype, self.jobname),
                                               contents[0])
             else:
-                #curly brackets
-                mscript += self._generate_job('jobs{1}.%s{1}.%s{1}' %
-                                              (self.jobtype, self.jobname),
-                                              contents[0])
+                if self.jobname in ['st', 'smooth', 'preproc', 'preproc8',
+                                'fmri_spec', 'fmri_est', 'factorial_design',
+                                'defs']:
+                    # parentheses
+                    mscript += self._generate_job('jobs{1}.%s{1}.%s(1)' %
+                                                  (self.jobtype, self.jobname),
+                                                  contents[0])
+                else:
+                    #curly brackets
+                    mscript += self._generate_job('jobs{1}.%s{1}.%s{1}' %
+                                                  (self.jobtype, self.jobname),
+                                                  contents[0])
         else:
             jobdef = {'jobs': [{self.jobtype:
-                                  [{self.jobname:self.reformat_dict_for_savemat
-                                      (contents[0])}]}]}
+                                [{self.jobname:
+                                  self.reformat_dict_for_savemat(contents[0])}]
+                                }]}
             savemat(os.path.join(cwd, 'pyjobs_%s.mat' % self.jobname), jobdef)
             mscript += "load pyjobs_%s;\n\n" % self.jobname
         mscript += """
-        if strcmp(spm('ver'),'SPM8'),
-           jobs=spm_jobman('spm5tospm8',{jobs});
-        end
-        spm_jobman(\'run_nogui\',jobs);\n
+        spm_jobman(\'run\', jobs);\n
         """
         if postscript is not None:
             mscript += postscript
         return mscript
-
-    @property
-    def version(self):
-        version_dict = Info.version()
-        if version_dict:
-            return '.'.join((version_dict['name'].split('SPM')[-1],
-                             version_dict['release']))
-        return version_dict
