@@ -25,8 +25,10 @@ Next release
         - FA created output files with erroneous extension
         
 * FIX: Deals properly with 3d files in SPM Realign
+* FIX: SPM with MCR fixed
 
 * API: 'name' is now a positional argument for Workflow, Node, and MapNode constructors
+* API: SPM now defaults to SPM8 or SPM12b job format
 
 Release 0.8.0 (May 8, 2013)
 ===========================
